# robot

./: .gitignore  README.md  pyproject.toml  run.sh  run_demo_mac.sh  run_demo_mac_full_gpu.sh
Robot_Life_CPP/: CMakeLists.txt  README.md
Robot_Life_CPP/apps/: robot_life_cpp_main.cpp
Robot_Life_CPP/configs/: app.yaml  deepstream_4vision.yaml  detectors.yaml  profile_catalog.yaml  python_modules.list  runtime_tuning.yaml  slow_scene.yaml  stabilizer.yaml
Robot_Life_CPP/docs/: DEEPSTREAM_4VISION_TODO.md  DEEPSTREAM_BASE_RUNTIME_PROJECT.md  DEEPSTREAM_IPC_PROTOCOL.md  DEEPSTREAM_OPERATIONS.md  DEEPSTREAM_PLATFORM_BASELINE.md  DEEPSTREAM_RUNBOOK.md  DEEPSTREAM_RUNTIME_ARCHITECTURE.md  DEPLOY_4090.md  MODULE_MIGRATION_MATRIX.md  ORIN_NX_DEPLOY.md  PERFORMANCE_BASELINE.md  RUNTIME_TUNING.md  SYSTEM_ARCHITECTURE.md
Robot_Life_CPP/docs/perf/: baseline_thresholds.json  latest_baseline.json  latest_baseline.txt
Robot_Life_CPP/include/robot_life_cpp/behavior/: behavior_registry.hpp  bt_nodes.hpp  decay_tracker.hpp  executor.hpp  manager.hpp  resources.hpp  safety_guard.hpp
Robot_Life_CPP/include/robot_life_cpp/bridge/: deepstream_protocol.hpp  state_snapshot_bridge.hpp
Robot_Life_CPP/include/robot_life_cpp/common/: contracts.hpp  cuda_runtime.hpp  interaction_intent.hpp  logging.hpp  robot_context.hpp  scene_taxonomy.hpp  schemas.hpp  tracing.hpp  visual_contract.hpp
Robot_Life_CPP/include/robot_life_cpp/event_engine/: arbitration_runtime.hpp  arbitrator.hpp  builder.hpp  cooldown_manager.hpp  decision_queue.hpp  entity_tracker.hpp  policy_layer.hpp  scene_aggregator.hpp  stabilizer.hpp  temporal_event_layer.hpp
Robot_Life_CPP/include/robot_life_cpp/migration/: module_catalog.hpp
Robot_Life_CPP/include/robot_life_cpp/perception/: base.hpp  deepstream_adapter.hpp  deepstream_export_contract.hpp  deepstream_exporter.hpp  deepstream_graph.hpp  deepstream_process_backend.hpp  deepstream_runner.hpp  registry.hpp
Robot_Life_CPP/include/robot_life_cpp/root/: cli.hpp  cli_shared.hpp  deepstream_backend_cli.hpp
Robot_Life_CPP/include/robot_life_cpp/runtime/: cuda_probe.hpp  event_injector.hpp  execution_manager.hpp  execution_support.hpp  health_monitor.hpp  interaction_intent.hpp  life_state.hpp  live_loop.hpp  load_shedder.hpp  pipeline_factory.hpp  profile_registry.hpp  runtime_tuning.hpp  scene_coordinator.hpp  target_governor.hpp  telemetry.hpp  ui_demo.hpp  ui_service.hpp
Robot_Life_CPP/models/: README.md
Robot_Life_CPP/models/deepstream/face/: pgie_face.txt  tracker_face.txt
Robot_Life_CPP/models/deepstream/motion/: motion_config.txt
Robot_Life_CPP/models/deepstream/pose/: labels_pose.txt  pgie_pose.txt
Robot_Life_CPP/models/deepstream/scene/: labels_scene.txt  pgie_scene.txt
Robot_Life_CPP/scripts/: build_4090.sh  check_full_migration.py  deepstream_real_bridge_failure_smoke.sh  deepstream_real_bridge_smoke.sh  doctor.sh  generate_module_catalog.py  orin_nx_deploy_debug.sh  perf_baseline.sh  regression.sh  run_4090_full.sh  run_cpu_full.sh  ui_dashboard_smoke.sh
Robot_Life_CPP/src/behavior/: __init__.cpp  behavior_registry.cpp  bt_nodes.cpp  bt_runtime.cpp  decay_tracker.cpp  executor.cpp  manager.cpp  resources.cpp  safety_guard.cpp
Robot_Life_CPP/src/bridge/: deepstream_protocol.cpp  state_snapshot_bridge.cpp
Robot_Life_CPP/src/common/: __init__.cpp  config.cpp  contracts.cpp  cuda_runtime.cpp  interaction_intent.cpp  logging.cpp  payload_contracts.cpp  robot_context.cpp  schemas.cpp  state_machine.cpp  tracing.cpp  visual_contract.cpp
Robot_Life_CPP/src/event_engine/: __init__.cpp  arbitration_runtime.cpp  arbitrator.cpp  builder.cpp  cooldown_manager.cpp  decision_queue.cpp  entity_tracker.cpp  policy_layer.cpp  scene_aggregator.cpp  stabilizer.cpp  temporal_event_layer.cpp
Robot_Life_CPP/src/migration/: module_catalog.cpp
Robot_Life_CPP/src/perception/: __init__.cpp  base.cpp  deepstream_adapter.cpp  deepstream_export_contract.cpp  deepstream_exporter.cpp  deepstream_graph.cpp  deepstream_process_backend.cpp  deepstream_runner.cpp  frame_dispatch.cpp  registry.cpp
Robot_Life_CPP/src/perception/adapters/: __init__.cpp  audio_adapter.cpp  gguf_qwen_adapter.cpp  insightface_adapter.cpp  mediapipe_adapter.cpp  mediapipe_pose_adapter.cpp  motion_adapter.cpp  panns_whisper_audio_adapter.cpp  qwen_adapter.cpp  whisper_adapter.cpp  yamnet_audio_adapter.cpp  yolo_pose_adapter.cpp
Robot_Life_CPP/src/root/: __init__.cpp  app.cpp  cli_deepstream_backend.cpp  cli_doctor.cpp  cli_live.cpp  cli_shared.cpp  cli_slow_scene.cpp  profiles.cpp
Robot_Life_CPP/src/runtime/: __init__.cpp  cuda_probe.cpp  event_injector.cpp  execution_manager.cpp  execution_support.cpp  health_monitor.cpp  interaction_intent.cpp  life_state.cpp  live_loop.cpp  load_shedder.cpp  long_task_coordinator.cpp  pipeline_factory.cpp  profile_registry.cpp  runtime_tuning.cpp  scene_context.cpp  scene_coordinator.cpp  scene_ops.cpp  sources.cpp  target_governor.cpp  telemetry.cpp  ui_demo.cpp  ui_service.cpp  ui_slow_scene.cpp
Robot_Life_CPP/src/slow_scene/: __init__.cpp  queue.cpp  schema.cpp  service.cpp  snapshot.cpp  worker.cpp
Robot_Life_CPP/tests/: test_core.cpp
configs/: README.md
configs/arbitration/: arbitration.v1.yaml  default.yaml
configs/behavior/: behavior.default.yaml  default.yaml
configs/detectors/: audio.default.yaml  default.yaml  face.default.yaml  (+4 more)
data/: README.md
docs/: 00_project_structure.md  01_prd.md  02_sdd.md  03_validation_4090.md  04_migration_orin_nx.md  05_model_selection_4090.md  4090_MVP_EXECUTION_TODO.md  4090_STAGE_REPORT.md  4090_TUNING_BACKLOG.md  99_4090_development_handoff.md  EXECUTION_TODO_V2.md  FAST_REACTION_BASELINE_V1.md  FAST_REACTION_SCENE_COOLDOWN_SPEC.md  FAST_SLOW_COORDINATION_SPEC_V1.md  LOCAL_VALIDATION_TODO.md  MAC_LOCAL_EXPERIENCE_REPORT.md  MVP_DEVELOPMENT_CHECKLIST.md  PHASE_EXECUTION_TODO_V1.md  README.md  SYSTEM_RUNTIME_REFERENCE_2026-04-01.md  TERMINAL_GOAL_EXECUTION_TODO_V2.md  TERMINAL_GOAL_TODO.md  UI_DEMO.md
scripts/: README.md
src/: README.md
tests/: README.md  conftest.py
tools/: README.md
(+236 files in other folders)
